tests/spec/fail/chan_send_type_mismatch.aja
ch = chan()
send(ch, 1)
send(ch, "x")
